--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -127,18 +127,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.4
 
-      - name: Install SDK extensions
-        run: |
-          # XXX: slc-cli does not actually work when the extensions aren't in the SDK!
-          for sdk in /simplicity_sdk*; do
-            slc signature trust --sdk "$sdk"
+      # - name: Install SDK extensions
+      #   run: |
+      #     # XXX: slc-cli does not actually work when the extensions aren't in the SDK!
+      #     for sdk in /simplicity_sdk*; do
+      #       slc signature trust --sdk "$sdk"
 
-            ln -s $PWD/simplicity_sdk_extensions "$sdk"/extension
+      #       ln -s $PWD/simplicity_sdk_extensions "$sdk"/extension
 
-            for ext in "$sdk"/extension/*/; do
-              slc signature trust --sdk "$sdk" --extension-path "$ext"
-            done
-          done
+      #       for ext in "$sdk"/extension/*/; do
+      #         slc signature trust --sdk "$sdk" --extension-path "$ext"
+      #       done
+      #     done
 
       - name: Build firmware
         id: build-firmware
