--- a/manifests/smlight_slzb07_ncp-uart-sw_115200.yaml
+++ b/manifests/smlight_slzb07_ncp-uart-sw_115200.yaml
@@ -4,7 +4,7 @@ base_project: src/ncp-uart-hw_EFR32MG21A020F768IM32
 filename: "{manifest_name}_{ezsp_version}"
 
 gbl:
-  fw_type: ncp-uart-hw
+  fw_type: ncp-uart-sw
   dynamic: ["ezsp_version"]
   baudrate: 115200
 
