Align NCP configs for EFR32MG21A020F.

--- a/manifests/tubeszb_mgm24_ncp-uart-hw_115200_max.yaml
+++ b/manifests/tubeszb_mgm24_ncp-uart-hw_115200_max.yaml
@@ -45,4 +45,5 @@ c_defines:
   SL_ZIGBEE_NEIGHBOR_TABLE_SIZE: 26
   SL_ZIGBEE_SOURCE_ROUTE_TABLE_SIZE: 254
   SL_ZIGBEE_MAX_END_DEVICE_CHILDREN: 64
+  SL_ZIGBEE_BINDING_TABLE_SIZE: 127
   SL_ZIGBEE_APS_DUPLICATE_REJECTION_MAX_ENTRIES: 255
