Add more "max" versions.

--- a/manifests/nabucasa_yellow_ncp-uart-hw_115200_max.yaml
+++ b/manifests/nabucasa_yellow_ncp-uart-hw_115200_max.yaml
@@ -1,10 +1,10 @@
-name: Yellow SW Zigbee
+name: Yellow Max Zigbee
 device: MGM210PA32JIA
 base_project: src/ncp-uart-hw_MGM210PA32JIA
 filename: "{manifest_name}_{ezsp_version}"
 
 gbl:
-  fw_type: ncp-uart-sw
+  fw_type: ncp-uart-hw
   dynamic: ["ezsp_version"]
   baudrate: 115200
 
@@ -14,7 +14,7 @@ add_components:
 
 c_defines:
   SL_IOSTREAM_USART_VCOM_BAUDRATE: 115200
-  SL_IOSTREAM_USART_VCOM_FLOW_CONTROL_TYPE: uartFlowControlSoftware
+  SL_IOSTREAM_USART_VCOM_FLOW_CONTROL_TYPE: usartHwFlowControlCtsAndRts
 
   SL_IOSTREAM_USART_VCOM_PERIPHERAL:    USART0
   SL_IOSTREAM_USART_VCOM_PERIPHERAL_NO: 0
@@ -25,17 +25,17 @@ c_defines:
   SL_IOSTREAM_USART_VCOM_RX_PORT: gpioPortA
   SL_IOSTREAM_USART_VCOM_RX_PIN:  6
 
-  SL_IOSTREAM_USART_VCOM_CTS_PORT: 0
-  SL_IOSTREAM_USART_VCOM_CTS_PIN:  0
+  SL_IOSTREAM_USART_VCOM_CTS_PORT: gpioPortD
+  SL_IOSTREAM_USART_VCOM_CTS_PIN:  2
 
-  SL_IOSTREAM_USART_VCOM_RTS_PORT: 0
-  SL_IOSTREAM_USART_VCOM_RTS_PIN:  0
+  SL_IOSTREAM_USART_VCOM_RTS_PORT: gpioPortC
+  SL_IOSTREAM_USART_VCOM_RTS_PIN:  1
+
+  SL_IOSTREAM_USART_VCOM_RX_BUFFER_SIZE: 64
 
   SL_SIMPLE_LED_BOARD_ACTIVITY_POLARITY: SL_SIMPLE_LED_POLARITY_ACTIVE_LOW
   SL_SIMPLE_LED_BOARD_ACTIVITY_PORT:     gpioPortB
   SL_SIMPLE_LED_BOARD_ACTIVITY_PIN:      1
-
-  SL_IOSTREAM_USART_VCOM_RX_BUFFER_SIZE: 32
 
   SL_CLOCK_MANAGER_HFXO_FREQ: 38400000
   SL_CLOCK_MANAGER_HFXO_CTUNE: 133
@@ -45,12 +45,12 @@ c_defines:
 
   SL_RAIL_UTIL_RSSI_OFFSET: -11
 
-  SL_ZIGBEE_ADDRESS_TABLE_SIZE: 16
-  SL_ZIGBEE_MULTICAST_TABLE_SIZE: 16
+  SL_ZIGBEE_ADDRESS_TABLE_SIZE: 32
+  SL_ZIGBEE_MULTICAST_TABLE_SIZE: 26
   SL_ZIGBEE_ROUTE_TABLE_SIZE: 16
-  SL_ZIGBEE_APS_UNICAST_MESSAGE_COUNT: 32
-  SL_ZIGBEE_BROADCAST_TABLE_SIZE: 15
+  SL_ZIGBEE_APS_UNICAST_MESSAGE_COUNT: 64
+  SL_ZIGBEE_BROADCAST_TABLE_SIZE: 30
   SL_ZIGBEE_NEIGHBOR_TABLE_SIZE: 26
   SL_ZIGBEE_SOURCE_ROUTE_TABLE_SIZE: 200
   SL_ZIGBEE_MAX_END_DEVICE_CHILDREN: 32
-  SL_ZIGBEE_BINDING_TABLE_SIZE: 32
+  SL_ZIGBEE_BINDING_TABLE_SIZE: 64
