--- a/manifests/smlight_slzb06m_ncp-uart-sw_115200_max.yaml
+++ b/manifests/smlight_slzb06m_ncp-uart-sw_115200_max.yaml
@@ -1,5 +1,5 @@
-name: SkyConnect SW Zigbee
-device: EFR32MG21A020F512IM32
+name: SLZB-06M Max Zigbee
+device: EFR32MG21A020F768IM32
 base_project: src/ncp-uart-hw_EFR32MG21A020F768IM32
 filename: "{manifest_name}_{ezsp_version}"
 
@@ -15,11 +15,11 @@ c_defines:
   SL_IOSTREAM_USART_VCOM_PERIPHERAL: USART0
   SL_IOSTREAM_USART_VCOM_PERIPHERAL_NO: 0
 
-  SL_IOSTREAM_USART_VCOM_TX_PORT: gpioPortA
-  SL_IOSTREAM_USART_VCOM_TX_PIN:  6
+  SL_IOSTREAM_USART_VCOM_TX_PORT: gpioPortB
+  SL_IOSTREAM_USART_VCOM_TX_PIN:  1
 
-  SL_IOSTREAM_USART_VCOM_RX_PORT: gpioPortA
-  SL_IOSTREAM_USART_VCOM_RX_PIN:  5
+  SL_IOSTREAM_USART_VCOM_RX_PORT: gpioPortB
+  SL_IOSTREAM_USART_VCOM_RX_PIN:  0
 
   SL_IOSTREAM_USART_VCOM_CTS_PORT: 0
   SL_IOSTREAM_USART_VCOM_CTS_PIN:  0
@@ -27,24 +27,22 @@ c_defines:
   SL_IOSTREAM_USART_VCOM_RTS_PORT: 0
   SL_IOSTREAM_USART_VCOM_RTS_PIN:  0
 
-  SL_APPLICATION_PRODUCT_ID: '{0xE9, 0x92, 0x67, 0x94, 0xBB, 0x2C, 0x4E, 0xC8, 0x9F, 0x36, 0xD9, 0xC6, 0x79, 0x4A, 0x81, 0xFB}'
-
-  SL_IOSTREAM_USART_VCOM_RX_BUFFER_SIZE: 32
+  SL_IOSTREAM_USART_VCOM_RX_BUFFER_SIZE: 64
 
   SL_CLOCK_MANAGER_HFXO_FREQ: 38400000
-  SL_CLOCK_MANAGER_HFXO_CTUNE: 133
+  SL_CLOCK_MANAGER_HFXO_CTUNE: 80
   SL_CLOCK_MANAGER_HFXO_PRECISION: 50
-  SL_CLOCK_MANAGER_LFXO_CTUNE: 79
+  SL_CLOCK_MANAGER_LFXO_CTUNE: 63
   SL_CLOCK_MANAGER_LFXO_PRECISION: 50
 
   SL_RAIL_UTIL_RSSI_OFFSET: -11
 
-  SL_ZIGBEE_ADDRESS_TABLE_SIZE: 16
-  SL_ZIGBEE_MULTICAST_TABLE_SIZE: 16
+  SL_ZIGBEE_ADDRESS_TABLE_SIZE: 32
+  SL_ZIGBEE_MULTICAST_TABLE_SIZE: 26
   SL_ZIGBEE_ROUTE_TABLE_SIZE: 16
-  SL_ZIGBEE_APS_UNICAST_MESSAGE_COUNT: 32
-  SL_ZIGBEE_BROADCAST_TABLE_SIZE: 15
+  SL_ZIGBEE_APS_UNICAST_MESSAGE_COUNT: 64
+  SL_ZIGBEE_BROADCAST_TABLE_SIZE: 30
   SL_ZIGBEE_NEIGHBOR_TABLE_SIZE: 26
   SL_ZIGBEE_SOURCE_ROUTE_TABLE_SIZE: 200
   SL_ZIGBEE_MAX_END_DEVICE_CHILDREN: 32
-  SL_ZIGBEE_BINDING_TABLE_SIZE: 32
+  SL_ZIGBEE_BINDING_TABLE_SIZE: 64
