--- a/manifests/nabucasa_skyconnect_ncp-uart-sw_115200_max.yaml
+++ b/manifests/nabucasa_skyconnect_ncp-uart-sw_115200_max.yaml
@@ -1,4 +1,4 @@
-name: SkyConnect SW Zigbee
+name: SkyConnect SW Max Zigbee
 device: EFR32MG21A020F512IM32
 base_project: src/ncp-uart-hw_EFR32MG21A020F768IM32
 filename: "{manifest_name}_{ezsp_version}"
@@ -29,7 +29,7 @@ c_defines:
 
   SL_APPLICATION_PRODUCT_ID: '{0xE9, 0x92, 0x67, 0x94, 0xBB, 0x2C, 0x4E, 0xC8, 0x9F, 0x36, 0xD9, 0xC6, 0x79, 0x4A, 0x81, 0xFB}'
 
-  SL_IOSTREAM_USART_VCOM_RX_BUFFER_SIZE: 32
+  SL_IOSTREAM_USART_VCOM_RX_BUFFER_SIZE: 64
 
   SL_CLOCK_MANAGER_HFXO_FREQ: 38400000
   SL_CLOCK_MANAGER_HFXO_CTUNE: 133
@@ -39,12 +39,12 @@ c_defines:
 
   SL_RAIL_UTIL_RSSI_OFFSET: -11
 
-  SL_ZIGBEE_ADDRESS_TABLE_SIZE: 16
-  SL_ZIGBEE_MULTICAST_TABLE_SIZE: 16
+  SL_ZIGBEE_ADDRESS_TABLE_SIZE: 32
+  SL_ZIGBEE_MULTICAST_TABLE_SIZE: 26
   SL_ZIGBEE_ROUTE_TABLE_SIZE: 16
-  SL_ZIGBEE_APS_UNICAST_MESSAGE_COUNT: 32
-  SL_ZIGBEE_BROADCAST_TABLE_SIZE: 15
+  SL_ZIGBEE_APS_UNICAST_MESSAGE_COUNT: 64
+  SL_ZIGBEE_BROADCAST_TABLE_SIZE: 30
   SL_ZIGBEE_NEIGHBOR_TABLE_SIZE: 26
   SL_ZIGBEE_SOURCE_ROUTE_TABLE_SIZE: 200
   SL_ZIGBEE_MAX_END_DEVICE_CHILDREN: 32
-  SL_ZIGBEE_BINDING_TABLE_SIZE: 32
+  SL_ZIGBEE_BINDING_TABLE_SIZE: 64
