--- a/manifests/smlight/smlight_slzb07_zigbee_router.yaml
+++ b/manifests/smlight/smlight_slzb07_zigbee_router.yaml
@@ -15,7 +15,7 @@ slcp_defines:
   SL_ZIGBEE_ADDRESS_TABLE_SIZE: 32
   SL_ZIGBEE_MULTICAST_TABLE_SIZE: 26
   SL_ZIGBEE_ROUTE_TABLE_SIZE: 16
-  SL_ZIGBEE_DISCOVERY_TABLE_SIZE: 8
+  SL_ZIGBEE_DISCOVERY_TABLE_SIZE: 16
 
 c_defines:  
   SL_IOSTREAM_USART_VCOM_BAUDRATE: 115200
@@ -54,6 +54,16 @@ c_defines:
   # all zigbee channels
   SL_ZIGBEE_AF_PLUGIN_NETWORK_STEERING_CHANNEL_MASK: 0x07fff800
   SL_ZIGBEE_AF_PLUGIN_NETWORK_STEERING_RADIO_TX_POWER: 20
+
+  SL_ZIGBEE_AF_PLUGIN_CONCENTRATOR_CONCENTRATOR_TYPE: HIGH_RAM_CONCENTRATOR
+  # <1-60>
+  SL_ZIGBEE_AF_PLUGIN_CONCENTRATOR_MIN_TIME_BETWEEN_BROADCASTS_SECONDS: 10
+  # <30-300>
+  SL_ZIGBEE_AF_PLUGIN_CONCENTRATOR_MAX_TIME_BETWEEN_BROADCASTS_SECONDS: 60
+  # <1-100>
+  SL_ZIGBEE_AF_PLUGIN_CONCENTRATOR_ROUTE_ERROR_THRESHOLD: 3
+  # <1-100>
+  SL_ZIGBEE_AF_PLUGIN_CONCENTRATOR_DELIVERY_FAILURE_THRESHOLD: 1
 
 zap_config:
   endpoint_types:
