--- a/manifests/sonoff/sonoff_zbdonglee_zigbee_router.yaml
+++ b/manifests/sonoff/sonoff_zbdonglee_zigbee_router.yaml
@@ -80,6 +80,16 @@ c_defines:
   #   a >5sec press will factory reset the adapter
   SL_ZIGBEE_AF_PLUGIN_BUTTON_JOINING_PERMIT_JOIN_TIMEOUT: 60
 
+  SL_ZIGBEE_AF_PLUGIN_CONCENTRATOR_CONCENTRATOR_TYPE: HIGH_RAM_CONCENTRATOR
+  # <1-60>
+  SL_ZIGBEE_AF_PLUGIN_CONCENTRATOR_MIN_TIME_BETWEEN_BROADCASTS_SECONDS: 10
+  # <30-300>
+  SL_ZIGBEE_AF_PLUGIN_CONCENTRATOR_MAX_TIME_BETWEEN_BROADCASTS_SECONDS: 60
+  # <1-100>
+  SL_ZIGBEE_AF_PLUGIN_CONCENTRATOR_ROUTE_ERROR_THRESHOLD: 3
+  # <1-100>
+  SL_ZIGBEE_AF_PLUGIN_CONCENTRATOR_DELIVERY_FAILURE_THRESHOLD: 1
+
 zap_config:
   endpoint_types:
     - name: "Centralized"
