--- a/manifests/sonoff/sonoff_zbdonglee_zigbee_router.yaml
+++ b/manifests/sonoff/sonoff_zbdonglee_zigbee_router.yaml
@@ -1,4 +1,4 @@
-name: ZBDongle-E Zigbee Router
+name: SONOFF DONGLE-E Zigbee Router
 device: EFR32MG21A020F768IM32
 base_project: src/zigbee_router
 filename: "{manifest_name}_{ezsp_version}_{baudrate}_{fw_variant}"
@@ -92,13 +92,8 @@ c_defines:
 
 zap_config:
   endpoint_types:
-    - name: "Centralized"
+    - name: Centralized
       clusters:
-        - name: "Basic"
-          attribute_defaults:
-              "model identifier": DONGLE-E
-              "manufacturer name": SONOFF
-              "date code": template:{now:%Y%m%d%H%M%S}
-              "sw build id": template:{sdk_version}
+        - name: Basic
           remove:
             - "Over the Air Bootloading"
