--- a/manifests/nabucasa/nabucasa_skyconnect_zigbee_router.yaml
+++ b/manifests/nabucasa/nabucasa_skyconnect_zigbee_router.yaml
@@ -1,4 +1,4 @@
-name: SkyConnect Zigbee Router
+name: NabuCasa SkyConnect Zigbee Router
 device: EFR32MG21A020F512IM32
 base_project: src/zigbee_router
 filename: "{manifest_name}_{ezsp_version}_{baudrate}_{fw_variant}"
@@ -69,13 +69,8 @@ c_defines:
 
 zap_config:
   endpoint_types:
-    - name: "Centralized"
+    - name: Centralized
       clusters:
-        - name: "Basic"
-          attribute_defaults:
-              "model identifier": SkyConnect
-              "manufacturer name": NabuCasa
-              "date code": template:{now:%Y%m%d%H%M%S}
-              "sw build id": template:{sdk_version}
+        - name: Basic
           remove:
             - "Over the Air Bootloading"
