--- a/manifests/smlight/smlight_slzb06m_zigbee_router.yaml
+++ b/manifests/smlight/smlight_slzb06m_zigbee_router.yaml
@@ -1,4 +1,4 @@
-name: SLZB-06M Zigbee Router
+name: SMLIGHT SLZB-06M Zigbee Router
 device: EFR32MG21A020F768IM32
 base_project: src/zigbee_router
 filename: "{manifest_name}_{ezsp_version}_{baudrate}_{fw_variant}"
@@ -67,13 +67,8 @@ c_defines:
 
 zap_config:
   endpoint_types:
-    - name: "Centralized"
+    - name: Centralized
       clusters:
-        - name: "Basic"
-          attribute_defaults:
-              "model identifier": SLZB-06M
-              "manufacturer name": SMLIGHT
-              "date code": template:{now:%Y%m%d%H%M%S}
-              "sw build id": template:{sdk_version}
+        - name: Basic
           remove:
             - "Over the Air Bootloading"
